--- a/index.html
+++ b/index.html
@@ -1,41 +1,173 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <title>My Resume</title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  </head>
-  <body>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  
-    <body id="page-top">
-      <!-- Navigation-->
-      <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
-          <a class="navbar-brand js-scroll-trigger" href="#page-top">
-              <span class="d-block d-lg-none">Anis Fatini binti Mohd Zawayi</span>
-              <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="..." /></span>
-          </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-          <div class="collapse navbar-collapse" id="navbarResponsive">
-              <ul class="navbar-nav">
-                  <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
-                  <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
-                  <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
-                  <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
-                  <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
-                  <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
-              </ul>
+<head>
+  <title>My Resume</title>
+  <!-- Required meta tags -->
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <!-- Font Awesome icons (free version)-->
+  <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+  <!-- Core theme CSS (includes Bootstrap)-->
+  <link href="styles.css" rel="stylesheet" />
+
+</head>
+
+<body id="page-top">
+  <!-- Navigation-->
+  <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="sideNav" style="background-color: #4F6F52;">
+    <a class="navbar-brand js-scroll-trigger" href="#page-top">
+      <span class="d-block d-lg-none">Anis Fatini binti Mohd Zawayi</span>
+      <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2"
+          src="assets/profile.jpg" alt="profile" /></span>
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
+      aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span
+        class="navbar-toggler-icon"></span></button>
+    <div class="collapse navbar-collapse" id="navbarResponsive">
+      <ul class="navbar-nav">
+        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#personal">About </a></li>
+        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#edu">Education</a></li>
+        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#work">Experience</a></li>
+        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skill">Skills</a></li>
+        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#project">Project</a></li>
+      </ul>
+    </div>
+  </nav>
+  <div class="container-fluid p-0" style="background-color: beige;">
+    <!-- About-->
+    <section class="resume-section" id="personal">
+      <div class="resume-section-content">
+        <h1 class="mb-0">
+          Anis Fatini binti Mohd Zawayi
+        </h1>
+        <div class="subheading mb-5">
+          Temerloh · Pahang · (+60)-10 2299213 ·
+          <a>anisfatini15@gmail.com </a>
+        </div>
+        <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level
+          overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall
+          value proposition.</p>
+      </div>
+    </section>
+
+    <hr class="m-0" />
+    <!-- Education-->
+    <section class="resume-section" id="edu">
+      <div class="resume-section-content">
+        <h2 class="mb-5">Education Background</h2>
+        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="flex-grow-1">
+            <h3 class="mb-0"> Universiti Utara Malaysia, Sintok, Kedah</h3>
+            <div class="subheading mb-3" style="font-size: medium; color: grey;">Bachelor of Science with Honours
+              (Information Technology)
+            </div>
+            <p>Major: Networking | CGPA 3.33</p>
           </div>
-      </nav>
-      
-  </body>
+          <div class="flex-shrink-0"><span style="color: black;">October 2021 - Present</span></div>
+        </div>
+        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="flex-grow-1">
+            <h3 class="mb-0">Kolej Profesional Mara, Indera Mahkota, Kuantan</h3>
+            <div class="subheading mb-3" style="font-size: medium; color: grey;">Diploma in Computer Networking</div>
+            <p>Major: Computer Networking | CGPA 3.59</p>
+          </div>
+          <div class="flex-shrink-0"><span style="color: black;">March 2018 - January 2020</span></div>
+        </div>
+    </section>
+
+    <hr class="m-0" />
+    <!-- Experience-->
+    <section class="resume-section" id="work">
+      <div class="resume-section-content">
+        <h2 class="mb-5">Work Experience</h2>
+        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="flex-grow-1">
+            <h3 class="mb-0">Authentic Venture Sdn Bhd, Bangi, Selangor</h3>
+            <div class="subheading mb-3" style="font-size: medium; color: grey;">Customer Success Officer</div>
+            <p> Provide customer support via calls, tickets, and online chat, facilitate onboarding for new users, and
+              offer system training for newcomers.
+            </p>
+          </div>
+          <div class="flex-shrink-0"><span style="color: black;">Feb 2021 - Sept 2021</span></div>
+        </div>
+        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="flex-grow-1">
+            <h3 class="mb-0">Authentic Venture Sdn Bhd, Bangi, Selangor</h3>
+            <div class="subheading mb-3" style="font-size: medium; color: grey;">IT Support Intern</div>
+            <p>
+              Conduct one-on-one coaching sessions with customers on system usage and perform software testing for new
+              system updates.</p>
+          </div>
+          <div class="flex-shrink-0"><span style="color: black;">Sept 2020 - Feb 2021</span></div>
+        </div>
+        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="flex-grow-1">
+            <h3 class="mb-0">Elabram System Sdn Bhd, Kajang, Selangor</h3>
+            <div class="subheading mb-3" style="font-size: medium; color: grey;">IT Support (Internal) Intern</div>
+            <p>
+              Deliver internal support to staff members, oversee network operations across three overseas sub-branches,
+              and assume the role of project designer for the Network Redesign sub-branch project.</p>
+          </div>
+          <div class="flex-shrink-0"><span style="color: black;">June 2020 - August 2020</span></div>
+        </div>
+    </section>
+    <hr class="m-0" />
+    <!-- Skills-->
+    <section class="resume-section" id="skill">
+      <div class="resume-section-content">
+        <h2 class="mb-5">Skills</h2>
+        <div class="subheading mb-3">Technical Skills</div>
+        <p> • Configure and troubleshooting network, operating system (Microsoft & Linux), software and hardware </p>
+        <p> • HTML, PHP, JAVA, SQL, C#, Flutter</p>
+
+        <div class="subheading mb-3">Interpersonal Skills</div>
+        <p> • Critical thinking, Problem solving, Innovative, Versatile, Teamwork, Adaptable, Communication. </p>
+      </div>
+    </section>
+    <!-- Project-->
+    <section class="resume-section" id="project">
+      <div class="resume-section-content">
+        <h2 class="mb-5">Project and Portfolio</h2>
+        <div class="subheading mb-3">• BookBytes</div>
+        <p style="text-align: justify;">
+          Led the development of an innovative online book shopping application utilizing Flutter framework and Dart
+          programming language, seamlessly integrated with MySQL database and Billplz payment gateway to enhance user
+          experience and streamline transactions.</p>
+        <div class="subheading mb-3">• IoT Water Quality Monitoring System</div>
+        <p style="text-align: justify;"> Elevated final year project selection with a focus on monitoring the quality of
+          drinking water, leveraging
+          Arduino framework and C++ programming language for development. Established seamless data capture and storage
+          protocols using MySQL database, while employing Power BI for crafting dynamic and insightful dashboards to
+          visualize data trends and insights.</p>
+      </div>
+    </section>
+    <hr class="m-0" />
+
+    <footer>
+      <footer class="bg-dark text-white py-4">
+        <div class="container text-center">
+          <h3>Connect with Me</h3>
+          <div class="social-icons">
+            <a class="social-icon" href="https://www.linkedin.com/in/anis-fatini-3522381a0/"><i class="fab fa-linkedin-in"></i></a>
+            <a class="social-icon" href="https://github.com/ansftnmz"><i class="fab fa-github"></i></a>
+          </div>
+        </div>
+      </footer>
+
+    </footer>
+    <!-- Bootstrap CSS v5.2.1 -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+
+    <!-- Bootstrap JavaScript Libraries -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+      crossorigin="anonymous"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+      integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+      crossorigin="anonymous"></script>
+</body>
+
 </html>
