--- a/index.html
+++ b/index.html
@@ -41,13 +41,12 @@
         <h1 class="mb-0">
           Anis Fatini binti Mohd Zawayi
         </h1>
-        <div class="subheading mb-5">
+        <div class="subheading mb-5" style="font-size: medium;">
           Temerloh · Pahang · (+60)-10 2299213 ·
           <a>anisfatini15@gmail.com </a>
         </div>
-        <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level
-          overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall
-          value proposition.</p>
+        <p class="lead mb-5">I am third year student's Bachelor in Science (Information Technology) major in Networking
+          at Universiti Utara Malaysia. </p>
       </div>
     </section>
 
@@ -125,6 +124,7 @@
         <p> • Critical thinking, Problem solving, Innovative, Versatile, Teamwork, Adaptable, Communication. </p>
       </div>
     </section>
+    <hr class="m-0" />
     <!-- Project-->
     <section class="resume-section" id="project">
       <div class="resume-section-content">
@@ -149,7 +149,8 @@
         <div class="container text-center">
           <h3>Connect with Me</h3>
           <div class="social-icons">
-            <a class="social-icon" href="https://www.linkedin.com/in/anis-fatini-3522381a0/"><i class="fab fa-linkedin-in"></i></a>
+            <a class="social-icon" href="https://www.linkedin.com/in/anis-fatini-3522381a0/"><i
+                class="fab fa-linkedin-in"></i></a>
             <a class="social-icon" href="https://github.com/ansftnmz"><i class="fab fa-github"></i></a>
           </div>
         </div>
@@ -168,6 +169,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
       integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
       crossorigin="anonymous"></script>
+
+    <!-- Core theme JS-->
+    <script src="scripts.js"></script>
 </body>
 
 </html>
